--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -34,7 +34,10 @@ $color-light-mode-grey: #909090;
 $color-light-mode-grey-dark: #272727;
 $color-light-mode-grey-darker: #1E1E1E;
 
-$color-light-mode-focus: #ff9900;
+$color-light-mode-btn-hover: #a353f2;
+$color-light-mode-btn-pressed: rgb(102, 0, 205);
+
+$color-light-mode-focus: #909090;
 
 $color-light-mode-link: #556AD3;
 $color-light-mode-link-hover: #344DCB;
